--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@ body {
   background-image: url(./Components/sunset.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center center;
+  /* background-attachment: fixed; */
+  /* background-position: center center; */
   
   /* background-position: center; */
 }
@@ -25,7 +25,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: center center;
+    /* background-position: center center; */
   }
 }
 
